Updates Converter, RatesParser, and Menu.